<resources>
    <string name="app_name">LINE Notification Support</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_test_notifications">Test Notifications</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dismiss_button_text">Dismiss</string>
    <string name="link_button_text">Website</string>
    <string name="permission_request_dialog_message">You will need to grant permissions for this app to access Line notifications.</string>
    <string name="disable_power_optimization_tip_dialog_title">Disable Power Optimization</string>
    <string name="disable_power_optimization_tip_dialog_yes">Update</string>
    <string name="delete_cache_confirmation_dialog_title">Please confirm you would like to delete the cached friend names?</string>
    <string name="delete_cache_confirmation_dialog_yes">Delete</string>
    <string name="make_line_message_notification_silent">Highly recommend to update the \"Message notifications\" setting to \"Silent\"</string>
    <string name="reminder_for_enabling_line_message_notification">Please remember to update the \"Message notifications\" setting back to \"Alert\"</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="messages_header">LINE Messages</string>
    <string name="calls_header">LINE Calls</string>
    <string name="notifications_header">Notifications</string>
    <string name="other_settings_header">Other Settings</string>
    <string name="identical_messages_title">Identical messages</string>
    <string name="conversation_starter_title">Start conversations</string>
    <string name="conversation_starter_summary_on">Show a special notification that can be used to start conversations by replying with a message that starts with a configured keyword.</string>
    <string name="conversation_starter_summary_off">Do not show the special notification.</string>
    <string name="generate_self_response_message_title">Show my responses sent from my watch</string>
    <string name="generate_self_response_message_summary_on">Show my responses sent from my watch in notifications. Useful to track your conversations and if you have responded. Note that the notification will be shown even if LINE FAILS to send the actual message and you may need to confirm through the LINE app.</string>
    <string name="generate_self_response_message_summary_off">Do not show my responses sent from my watch in notifications.</string>
    <string name="use_legacy_sticker_loader_title">Legacy sticker loader</string>
    <string name="use_legacy_sticker_loader_summary_on">Use the old sticker loader. Use this option only if the stickers are not showing.</string>
    <string name="use_legacy_sticker_loader_summary_off">Use the up-to-date sticker loader.</string>
    <string name="use_big_message_splitter_title">Split large messages</string>
    <string name="use_big_message_splitter_summary_on">Split large messages into multiple notifications.</string>
    <string name="use_big_message_splitter_summary_off">Do not split large messages into multiple notifications.</string>
    <string name="message_size_limit_title">Message size limit</string>
    <string name="split_message_max_pages_title">Max number of pages of split messages</string>
    <string name="auto_call_notifications_title">Continuous call notifications</string>
    <string name="auto_call_notifications_summary_on">Receive multiple notifications during incoming calls to prevent missing notifications.</string>
    <string name="auto_call_notifications_summary_off">Receive one notification during incoming call.</string>
    <string name="auto_call_notifications_timeout_title">When to stop auto call notifications?</string>
    <string name="auto_call_notifications_wait_title">Duration in between continuous call notifications</string>
    <string name="create_new_continuous_call_notifications_title">[BETA] Multiple notifications for calls</string>
    <string name="create_new_continuous_call_notifications_summary_on">Create new notifications everytime. Suitable for smart bands.</string>
    <string name="create_new_continuous_call_notifications_summary_off">Use the same notifications everytime.</string>
    <string name="call_notification_action_reverse_order_title">Incoming call action order</string>
    <string name="call_notification_action_reverse_summary_on">Show "Decline" then "Answer". Use this option when you tend to decline calls more often.</string>
    <string name="call_notification_action_reverse_summary_off">Show "Answer" then "Decline". Use this option when you tend to answer calls more often.</string>
    <string name="bluetooth_control_in_calls_title">Bluetooth control during calls</string>
    <string name="bluetooth_control_in_calls_summary_on">Disable Bluetooth during calls. There is a known LINE bug where the volume is very low during video calls when connected to Samsung Watches. You can update this setting through Tasker (details on website).</string>
    <string name="bluetooth_control_in_calls_summary_off">Do nothing during calls. You can update this setting through Tasker (details on website).</string>
    <string name="notification_settings_title">Manage Notification Settings</string>
    <string name="notification_settings_summary">Change settings such as sound, vibration, and pop-ups.</string>
    <string name="manage_line_message_notifications_title">[BETA] Manage LINE notifications</string>
    <string name="manage_line_message_notifications_summary_on">Use LINE Notification Support to handle LINE messages. LINE messages will be automatically dismissed.</string>
    <string name="manage_line_message_notifications_summary_off">Do not mess with LINE notifications</string>
    <string name="auto_dismiss_line_notification_support_messages_title">Auto dismiss notifications</string>
    <string name="auto_dismiss_line_notification_support_messages_summary_on">Dismiss notifications from LINE Notification Support when LINE notifications are dismissed</string>
    <string name="auto_dismiss_line_notification_support_messages_summary_off">Do not dismiss notifications from LINE Notification Support when LINE notifications are dismissed</string>
    <string name="merge_message_notification_channel_title">Merge message notification channels</string>
    <string name="merge_message_notification_channel_summary_on">Single notification channel for messages. Calls will have a separate notification channel. Useful if you\'d like to set the same notification sound for all messages.</string>
    <string name="merge_message_notification_channel_summary_off">Multiple notification channels for messages. You can set different notification sounds for each chat and even mute the ones you don\'t really care.</string>
    <string name="single_notification_with_history_title">Use a single notification for each conversation</string>
    <string name="single_notification_with_history_summary_on">A conversation can contain up to 10 previous messages. Easier to see the conversation history and also supports long messages without splitting. Highly recommend Samsung watches to try this option.</string>
    <string name="single_notification_with_history_summary_off">Use the traditional notification mechanism where each message will have a new notification.</string>
    <string name="max_notification_workaround_title">[BETA] Workaround Android notification limit. Android 10 has a limit of 25 notifications per app while older Android versions have a limit of 50.</string>
    <string name="max_notification_workaround_summary_on">This option holds notifications when exceeding the limit and resends them when slots are available after notifications being dismissed. This is a new feature and may have bugs. Please keep your active notification count low if possible.</string>
    <string name="max_notification_workaround_summary_off">This is the default Android behavior. You will not receive any notifications from this app if you exceed the limit.</string>
    <string name="power_optimization_settings_title">Optimize Power Settings</string>
    <string name="power_optimization_settings_summary">It is highly recommended to disable power optimization for both LINE and LINE Notification Support. With power optimization, LINE will miss messages or fail to send responses through your watch. Similarly LINE Notification support may not successfully forward notifications from LINE.</string>
    <string name="delete_cached_friend_names_title">Delete Cached Friend Names</string>
    <string name="delete_cached_friend_names_summary">Use this option when your friends change their names causing notifications to show out-dated ones.</string>
    <string name="line_version_warning_10_19_1">This LINE version (10.19.1) you are using does not provide the title of the chat group. Instead of showing the title of the chat group, this app will list out the users who previously responded as a mitigation. If not showing the title is a problem, please downgrade your LINE version to 10.18.2 or 10.19.2 and above.</string>
    <string name="author">Author: Rick Wang (linenotificationapp@gmail.com)"</string>
    <string name="recommended_settings">Find or suggest recommended settings in our <a href="https://github.com/rickwangtw/LineNotificationSupport/blob/main/README.md#recommended-settings">website</a>!</string>
    <string name="contribute_to_open_source">This is an open source project! Feel free to contribute! https://github.com/rickwangtw/LineNotificationSupport"</string>
    <string name="support_donate_app">Please support my effort through the donate version: https://play.google.com/store/apps/details?id=com.mysticwind.linenotificationsupport.donate</string>
    <string name="conversation_notification_action_button">Reply</string>
    <string name="conversation_notification_action_button_message">Message to reply</string>
    <string name="conversation_start_notification_title">Start a conversation</string>
    <string name="conversation_start_notification_action_button">Start conversation</string>
    <string name="conversation_start_notification_action_button_message">Message that starts with keyword configured for the chat.</string>
    <string name="conversation_start_notification_disable_feature_action_button">Disable feature</string>
    <string name="conversation_start_notification_content_no_keywords">You have not configured any keywords to start conversations yet. Click me to configure keywords.</string>
    <string name="conversation_start_notification_content_no_reply_action">No messages from LINE received previously so you cannot start a conversation. A list of available chat will be shown here after you receive LINE messages.</string>
    <string name="conversation_start_notification_content_guidance">Start a conversation by starting your message with the keyword, for example, send \"%1$s\" to start a conversation for chat \"%2$s\" with message \"%3$s\"</string>
    <string name="conversation_start_notification_content_sample_message">Hello!</string>
    <string name="conversation_start_notification_content_list_of_chat_prefix">This is a list of available chats and keywords:\n</string>
    <string name="conversation_start_remote_input_invalid_message">Failed to find message to send from [%1$s].</string>
    <string name="conversation_start_remote_input_no_keyword">Cannot find keyword from message [%1$s].</string>
</resources>