<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/calls_header">

        <SwitchPreferenceCompat
            app:key="auto_call_notifications"
            app:title="@string/auto_call_notifications_title"
            app:defaultValue="true"
            app:summaryOff="@string/auto_call_notifications_summary_off"
            app:summaryOn="@string/auto_call_notifications_summary_on" />

        <ListPreference
            app:dependency="auto_call_notifications"
            app:defaultValue="-1"
            app:entries="@array/auto_call_timeout_entries"
            app:entryValues="@array/auto_call_timeout_values"
            app:key="auto_notifications_timeout"
            app:title="@string/auto_call_notifications_timeout_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>