<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mysticwind.linenotificationsupport.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/action_debug"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_notifications"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/action_test_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_keyword_settings"
        android:visible="false"
        android:orderInCategory="100"
        android:title="Keyword Settings"
        app:showAsAction="never" />

</menu>